# uifw-elementary

./: .gitignore  AUTHORS  ChangeLog  README  autogen.sh  configure.ac  elementary.spec.in
TC/: _export_env.sh  build.sh  execute.sh  tet_scen_arm  tet_scen_i386  tet_scen_i686
TC/elm_ts/actionslider/: Makefile  tslist  utc_MODULE_API_func.c.in  utc_UIFW_elm_actionslider_add_func.c  utc_UIFW_elm_actionslider_hold_func.c  utc_UIFW_elm_actionslider_indicator_pos_set_func.c  utc_UIFW_elm_actionslider_label_set_func.c  (+1 more)
config/: Makefile.am  profile.src
config/default/: base.src
config/desktop/: base.src
config/extension/: Makefile.am
config/illume/: base.src
config/mobile/: Makefile.am  base.src
config/slp/: Makefile.am  base.cfg  base.src
config/standard/: base.src
data/: Makefile.am
data/edje_externals/: Makefile.am  icons.edc
data/images/: Makefile.am
data/objects/: test.edc
data/themes/: Makefile.am  default.edc
data/xmls/: Makefile.am  Makefile.in  elementary.xml
debian/: SVN_REV  changelog  control  libelm-svn-01.install  libelm.install  libelm.postinst  rules
doc/: Doxyfile.in  Makefile.am  examples.dox  index.doxy  widget_preview_tmpl_head.c
doc/widgets/: Makefile.am  widget_preview_ctxpopup.c  widget_preview_flip.c  widget_preview_genlist1.c  widget_preview_icon.c  widget_preview_image.c  widget_preview_index.c  widget_preview_mapbuf.c
packaging/: elementary.spec
po/: LINGUAS  POTFILES.in  ar.po  az_IR.po  cs.po  de.po  el.po  en_US.po  es_ES.po  fa.po  fr.po  he.po  it.po  ja_JP.po  ko_KR.po  nl.po  ps.po  pt.po  ru_RU.po  tr_TR.po  ur.po  yi.po  zh_CN.po  zh_HK.po  zh_TW.po
src/edje_externals/: Makefile.am  elm.c  elm_bubble.c  elm_button.c  elm_calendar.c  elm_colorpalette.c  elm_datefield.c  elm_datepicker.c  elm_entry.c  elm_gengrid.c  elm_genlist.c  elm_icon.c  elm_index.c  elm_list.c  elm_map.c  elm_multibuttonentry.c  elm_navigationbar.c  elm_navigationbar_ex.c  elm_nocontents.c  elm_notify.c  elm_page_control.c  elm_pager.c  elm_panes.c  elm_picker.c  elm_scrolled_entry.c  elm_scroller.c  elm_searchbar.c  elm_segment_control.c  elm_slider.c  elm_thumb.c  elm_timepicker.c  elm_toggle.c  elm_toolbar.c  elm_video.c  modules.inc  private.h
src/examples/: Makefile.am  actionslider_example_01.c  anchorblock_example_01.c  bubble_example_01.c  button_example_01.c  calendar_example_05.c  clock_example.c  ctxpopup_example_01.c  diskselector_example_01.c  entry_example.c  flip_example_01.c  general_funcs_example.c  gengrid_example.c  genlist_example_01.c  genlist_example_02.c  genlist_example_03.c  genlist_example_04.c  genlist_example_05.c  icon_example_01.c  image_example_01.c  index_example_01.c  index_example_02.c  inwin_example.c  list_example_02.c  list_example_03.c  map_example_01.c  map_example_02.c  map_example_03.c  mapbuf_example.c  menu_example_01.c  photocam_example_01.c  slider_example.c  slideshow_example.c  theme_example_01.c  web_example.c  win_example.c
src/lib/: Elementary.h  Elementary.h.in  Makefile  Makefile.am  Makefile.in  elc_anchorblock.c  elc_anchorview.c  elc_ctxpopup.c  elc_ctxpopup.h  elc_fileselector.c  elc_fileselector_button.c  elc_fileselector_button.h  elc_fileselector_entry.c  elc_fileselector_entry.h  elc_hoversel.c  elc_hoversel.h  elc_multibuttonentry.c  elc_multibuttonentry.h  elc_naviframe.c  elc_naviframe.h  elc_navigationbar.c  elc_navigationbar_ex.c  elc_notepad.c  elc_player.c  elc_popup.c  elc_scrolled_entry.c  elm_access.c  elm_actionsheet.c  elm_actionslider.c  elm_actionslider.h  elm_analogclock.c  elm_animatedicon.c  elm_animator.c  elm_app.h  elm_autocompleteview.c  elm_bg.c  elm_bg.h  elm_box.c  elm_box.h  elm_bubble.c  (+325 more)
src/lib/.libs/: libelementary-ver-pre-svn-06.so.0.7.0  libelementary.lai
src/modules/: Makefile.am
tests/: aclocal.m4  config.cache  config.cache-env  config.status  configure  configure.ac  elementary_config.h  elementary_config.h.in  libtool  readme.slp2
tests/TC/: tet_scen_i386
tests/debian/: files  libelm-bin.substvars  libelm.install  libelm.substvars
tests/po/: POTFILES  POTFILES.in  ar.po  de.po  el.po  elementary.pot  en_US.po  fr.po  he.po  it.po  ja_JP.po  ko_KR.po  nl.po  pt.po
(+1095 files in other folders)
